--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <p>To stay true to the bitcoin protocol, and deliver the best and most accurate representation, the project will let it self be guided by the network rules themselves. All visual elements should have a distinct purpose and avoid ambiguity and redundancy as much as possible.</p>
             <p>The narrative will guide the user through all aspects of bitcoin, from network configurations, to the way bits are sorted in signatures.</p>
             <p>Looking for contributors in the community that can add value to the film by adding their own interests and skills to the project. If successful, this film will help bitcoiners visualize and understand each component and their function.</p>
-            <p>Similar attempts have been successful at illustrating the universe in relation to the human scale. This film will represent bitcoin with the same precision.</p>
+            <p>Similar attempts have been successful at illustrating the universe in relation to the human scale. This film aims at representing bitcoin with the same precision.</p>
           </div>
 
           <div id="references">
